tests/neg-custom-args/captures/mutvars.check
-- Error: tests/neg-custom-args/captures/mutvars.scala:3:28 ------------------------------------------------------------
3 |  def hide(x: T) = this.fld = x // error
  |                   ^^^^^^^^^^^^
  |                   Cannot assign to field fld of Ref.this
  |                   since the access is in method hide, which is not an update method.
-- Error: tests/neg-custom-args/captures/mutvars.scala:8:13 ------------------------------------------------------------
8 |    self.fld = x  // error
  |    ^^^^^^^^^^^^
  |    Cannot assign to field fld of self
  |    since its capture set {self} is read-only.
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/mutvars.scala:9:25 ---------------------------------------
9 |    val self2: Ref[T]^ = this // error // error separation
  |                         ^^^^
  |                         Found:    Ref[T]^{Ref.this.rd}
  |                         Required: Ref[T]^{any}
  |
  |                         Note that {any} is an exclusive capture set of the stateful type Ref[T]^{any},
  |                         it cannot subsume a read-only capture set of the stateful type Ref[T]^{Ref.this.rd}.
  |
  |                         where:    any is a root capability classified as Unscoped in the type of value self2
  |
  | longer explanation available when compiling with `-explain`
-- Error: tests/neg-custom-args/captures/mutvars.scala:13:16 -----------------------------------------------------------
13 |    self3().fld = x  // error
   |    ^^^^^^^^^^^^^^^
   |    Cannot assign to field fld of Ref[T^{}]^{Ref.this.rd}
   |    since its capture set {Ref.this.rd} of value self3 is read-only.
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/mutvars.scala:14:37 --------------------------------------
14 |    val self4: () => Ref[T]^ = () => this // error // error separation
   |                                     ^^^^
   |                            Found:    Ref[T]^{Ref.this.rd}
   |                            Required: Ref[T]^{any}
   |
   |                            Note that {any} is an exclusive capture set of the stateful type Ref[T]^{any},
   |                            it cannot subsume a read-only capture set of the stateful type Ref[T]^{Ref.this.rd}.
   |
   |                            where:    any is a root capability classified as Unscoped in the type of value self4
   |
   | longer explanation available when compiling with `-explain`
-- Error: tests/neg-custom-args/captures/mutvars.scala:18:16 -----------------------------------------------------------
18 |    self5().fld = x  // error
   |    ^^^^^^^^^^^^^^^
   |    Cannot assign to field fld of Ref[T^{}]^{Ref.this.rd}
   |    since its capture set {Ref.this.rd} of method self5 is read-only.
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/mutvars.scala:19:27 --------------------------------------
19 |    def self6(): Ref[T]^ = this // error // error separation
   |                           ^^^^
   |                    Found:    Ref[T]^{Ref.this.rd}
   |                    Required: Ref[T]^{any}
   |
   |                    Note that {any} is an exclusive capture set of the stateful type Ref[T]^{any},
   |                    it cannot subsume a read-only capture set of the stateful type Ref[T]^{Ref.this.rd}.
   |
   |                    where:    any is a root capability classified as Unscoped in the result type of method self6
   |
   | longer explanation available when compiling with `-explain`
-- Error: tests/neg-custom-args/captures/mutvars.scala:24:29 -----------------------------------------------------------
24 |  def set(x: T) = this.x.fld = x // error
   |                  ^^^^^^^^^^^^^^
   |                  Cannot assign to field fld of Ref2.this.x
   |                  since the access is in method set, which is not an update method.
-- Error: tests/neg-custom-args/captures/mutvars.scala:31:9 ------------------------------------------------------------
31 |  r1.fld = 33 // error
   |  ^^^^^^^^^^^
   |  Cannot assign to field fld of r1
   |  since its capture set {r1} is read-only.
-- Error: tests/neg-custom-args/captures/mutvars.scala:36:11 -----------------------------------------------------------
36 |  r3.x.fld = 33 // error
   |  ^^^^^^^^^^^^^
   |  Cannot assign to field fld of r3.x
   |  since the capture set {r3} of its prefix (r3 : Ref2[Int]) is read-only.
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/mutvars.scala:41:35 --------------------------------------
41 |  val r5: () => Ref2[Int]^ = () => ref2 // error
   |                                   ^^^^
   |                            Found:    (ref2 : Ref2[Int])
   |                            Required: Ref2[Int]^{any}
   |
   |                            Note that {any} is an exclusive capture set of the stateful type Ref2[Int]^{any},
   |                            it cannot subsume a read-only capture set of the stateful type (ref2 : Ref2[Int]).
   |
   |                            Note that capability `any².rd` cannot flow into capture set {any}.
   |
   |                            where:    any  is a root capability classified as Unscoped in the type of value r5
   |                                      any² is a root capability classified as Unscoped in the type of value ref2
   |
   | longer explanation available when compiling with `-explain`
-- Error: tests/neg-custom-args/captures/mutvars.scala:44:13 -----------------------------------------------------------
44 |  r6().x.fld = 33 // error
   |  ^^^^^^^^^^^^^^^
   |  Cannot assign to field fld of Ref[Int]^{any.rd}
   |  since its capture set {any.rd} is read-only.
-- Error: tests/neg-custom-args/captures/mutvars.scala:9:15 ------------------------------------------------------------
9 |    val self2: Ref[T]^ = this // error // error separation
  |               ^^^^^^^
  |               Separation failure: value self2's type Ref[T]^ hides non-local this of class class Ref.
  |               The access must be in a consume method to allow this.
-- Error: tests/neg-custom-args/captures/mutvars.scala:14:18 -----------------------------------------------------------
14 |    val self4: () => Ref[T]^ = () => this // error // error separation
   |               ^^^^^^^^^^^^^
   |               Separation failure: value self4's type () => Ref[T]^ hides non-local this of class class Ref.
   |               The access must be in a consume method to allow this.
-- Error: tests/neg-custom-args/captures/mutvars.scala:19:17 -----------------------------------------------------------
19 |    def self6(): Ref[T]^ = this // error // error separation
   |                 ^^^^^^^
   |                 Separation failure: method self6's result type Ref[T]^ hides non-local this of class class Ref.
   |                 The access must be in a consume method to allow this.
